--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             window.location.href='cmsvictor://'
         }
         function buttonClicked2() {
-            window.location.href='https://realshortapp.onelink.me/Zof7?af_xp=custom&pid=fb-w2a-h5&c=RS-W2A-H5&deep_link_value=cmsvictor%3A%2F%2F%3FfromType%3D4%26type%3D1001%26parm1%3D65f3df64f4d6f81c48076461%26book_type%3D1%26chapterId%3D59s2d77cv1%26ad_type%3D&af_ios_url=https://apps.apple.com/us/app/reelshort/id1636235979?ppid=227ee137-98ad-4686-8e81-1c30fb2e9dd9&af_dp=cmsvictor%3A%2F%2F%3FfromType%3D4%26type%3D1001%26parm1%3D65f3df64f4d6f81c48076461%26book_type%3D1%26chapterId%3D59s2d77cv1%26ad_type%3D'
+            window.location.href='https://realshortapp.onelink.me/Zof7?af_xp=custom&pid=fb-w2a-h5&c=RS-W2A-H5&deep_link_value=cmsvictor%3A%2F%2F%3FfromType%3D4%26type%3D1001%26parm1%3D65f3df64f4d6f81c48076461%26book_type%3D1%26chapterId%3D59s2d77cv1%26ad_type%3D&af_ios_url=https://apps.apple.com/us/app/reelshort/id1636235979?ppid=227ee137-98ad-4686-8e81-1c30fb2e9dd9'
         }
     </script>
 </head>
